--- a/pages/index.css
+++ b/pages/index.css
@@ -4,9 +4,11 @@
 
 /* BEM */
 
+/* page */
+@import url(../blocks/page/page.css);
+
 /* cover */
 @import url(../blocks/cover/cover.css);
-@import url(../blocks/cover/__background/cover__background.css);
 @import url(../blocks/cover/__overlay/cover__overlay.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
