--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -2,7 +2,8 @@
   width: 100%;
   opacity: 70%;
   grid-column: 1;
-  grid-row: 1/3;
+  grid-row: 1;
+  transition: opacity 0.3s linear;
 }
 
 .cover:hover .cover__overlay {
