--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,5 @@
 .cover__title {
-  margin: 245px auto 0;
+  margin: auto;
   max-width: 560px;
   font-weight: 900;
   font-size: 72px;
@@ -8,4 +8,11 @@
   grid-column: 1;
   grid-row: 1;
   z-index: 1;
+}
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
