--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,7 +3,7 @@
   max-width: 1184px;
   font-size: 0;
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: 1fr;
   grid-template-columns: 1fr;
   text-decoration: none;
   color: white;
