--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,3 +1,14 @@
 .footer__copyright {
   margin: 0 0 0 auto;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    margin: 16px 0 0 0;
+    font-size: 14px;
+    line-height: 14px;
+  }
 }
