--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,8 +2,17 @@
   margin: 0 18px 0 0;
   text-decoration: none;
   color: white;
+  transition: opacity 0.3s linear;
 }
 
 .footer__link:hover {
   opacity: 80%;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__link {
+    margin: 0 0 32px 0;
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
