--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,3 +5,17 @@
   display: flex;
   box-sizing: border-box;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footer {
+    padding: 88px 24px 24px;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .footer {
+    padding: 64px 16px 24px;
+    flex-direction: column;
+  }
+}
