--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,6 +5,7 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 28px;
+  transition: opacity 0.3s linear;
 }
 
 .header__lang-link:active {
@@ -13,4 +14,11 @@
 
 .header__lang-link:hover {
   opacity: 80%;
+}
+
+@media screen and (max-width: 767px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
