--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,3 +7,15 @@
   gap: 18px;
   box-sizing: border-box;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header {
+    padding: 28px 24px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    padding: 16px 16px 0;
+  }
+}
