--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,3 +6,15 @@
   overflow: hidden;
   box-sizing: border-box;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .lead {
+    padding: 56px 0 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead {
+    padding: 40px 0 0;
+  }
+}
