--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,3 +8,23 @@
   overflow: hidden;
   box-sizing: border-box;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .photo-grid {
+    gap: 14px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .photo-grid {
+    gap: 16px;
+    padding: 0 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    gap: 12px;
+    padding: 0 16px;
+  }
+}
