--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -4,6 +4,7 @@
   text-decoration: none;
   text-decoration-line: underline;
   color: white;
+  transition: opacity 0.3s linear;
 }
 
 .place__link:hover {
