--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,3 +9,19 @@
 .place__paragraph:first-of-type {
   margin:0;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .place__paragraph {
+    margin: 25px 0 0;
+    font-size: 16px;
+    line-height: 163%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__paragraph {
+    margin: 25px 0 0;
+    font-size: 16px;
+    line-height: 163%;
+  }
+}
