--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,7 +3,31 @@
   padding: 40px 0;
   display: grid;
   grid-template-columns: 1fr 1.05fr;
-  grid-template-rows: auto auto;
   column-gap: 40px;
   row-gap: 48px;
+  box-sizing: border-box;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .place {
+    grid-template-columns: 1fr 1.035fr;
+    column-gap: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .place {
+    grid-template-columns: 1fr 1.035fr;
+    padding: 36px 0;
+    column-gap: 28px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place {
+    padding: 25px 0;
+    grid-template-columns: 1fr;
+    column-gap: 0px;
+    row-gap: 32px;
+  }
 }
