--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,17 +1,15 @@
 .cover__title {
-  margin: auto;
+  margin: auto auto 0;
   max-width: 560px;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
   text-align: center;
-  grid-column: 1;
-  grid-row: 1;
-  z-index: 1;
 }
 
 @media screen and (max-width: 767px) {
   .cover__title {
+    max-width: 288px;
     font-size: 32px;
     line-height: 35px;
   }
