--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,6 +5,6 @@
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr;
-  text-decoration: none;
-  color: white;
+  background-image: url("../../images/cover-trains.jpg");
+  background-size: contain;
 }
