--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -8,10 +8,6 @@
   transition: opacity 0.3s linear;
 }
 
-.header__lang-link:active {
-  text-decoration: underline;
-}
-
 .header__lang-link:hover {
   opacity: 80%;
 }
@@ -20,5 +16,6 @@
   .header__lang-link {
     font-size: 18px;
     line-height: 20px;
+    margin-bottom: 8px;
   }
 }
