--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,10 @@
 .place__image {
   width: 100%;
 }
+
+@media screen and (max-width: 767px) {
+  .place__image {
+    margin: 0 -16px 0;
+    width: calc(100% + 32px);
+  }
+}
