--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,7 @@
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__digit/intro__digit.css);
 
 /* lead */
 @import url(../blocks/lead/lead.css);
